--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -17,7 +17,7 @@
     margin: 20px 20px ;
     position: relative;
     cursor: pointer;
-    text-decoration:underline white;
+    text-decoration:underline aliceblue;
 }
 
 .container:hover{
