--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -11,6 +11,10 @@
     font-size:small;
 }
 
+.item {
+    display:none;
+}
+
 @media screen and (max-width: 835px){
     .container{
         flex-direction:column;
