--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -63,7 +63,7 @@
     border-radius: 6px;
     width:300px;
     color:aliceblue;
-    height:200px;
+    height:fit-content;
     padding:25px 20px ;
     display:inline-block;
     text-align:center;
@@ -96,7 +96,7 @@
     border-radius: 6px;
     width: 300px;
     color: aliceblue;
-    height: 200px;
+    height: fit-content;
     padding: 25px 20px;
     display: inline-block;
 }
