--- a/styles/admin.module.css
+++ b/styles/admin.module.css
@@ -121,6 +121,10 @@ table.orders-table tbody tr {
     background: cornflowerblue;
     padding: 20px;
     border-radius: 20px;
+    text-align: center;
+  }
+  .item{
+    text-align: center;
   }
 
   .table {
@@ -128,6 +132,7 @@ table.orders-table tbody tr {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   .trTitle {
@@ -144,6 +149,10 @@ table.orders-table tbody tr {
   .imgTd{
       display:flex;
       justify-content:center;
+  }
+
+  .td{
+    border-bottom: 4px solid black;
   }
   
   .imgContainer {
