--- a/styles/admin.module.css
+++ b/styles/admin.module.css
@@ -145,6 +145,7 @@ table.orders-table tbody tr {
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    padding: 10px;
   }
   .imgTd{
       display:flex;
