--- a/styles/admin.module.css
+++ b/styles/admin.module.css
@@ -153,7 +153,7 @@ table.orders-table tbody tr {
   }
 
   .td{
-    border-bottom: 1px solid black;
+    border-bottom: 1px dashed black;
   }
   
   .imgContainer {
