--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -66,7 +66,7 @@
     height:fit-content;
     padding:25px 20px ;
     display:inline-block;
-    text-align:center;
+    padding-left: 25px;
 }
 
 .choose{
