--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -66,11 +66,15 @@
     height:fit-content;
     padding:25px 20px ;
     display:inline-block;
-    padding-left: 25px;
+    padding: 25px 10px;
 }
 
 .choose{
     text-align:center;
+}
+
+.sizesOption{
+    padding-left: 25px;
 }
 
 .size{
