--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ header{
     -webkit-box-shadow: 0 0 10px #bbb;
     -moz-box-shadow: 0 0 10px #bbb;
     color: red;
-    background-color:  #feca04;
+    background-color:  coral;
     position:fixed;
     width: 100vw;
 }
@@ -61,15 +61,6 @@ nav::after{
   background:  rgba(255,255,255,.3);
 }
 
-.logo{
-  position: relative;
-  z-index: 9999;
-  color: red;
-  font-family: monospace;
-  font-size: 25px;
-  font-weight: bold;
-  cursor: pointer;
-}
 
 .menu{
   display: flex;
@@ -92,7 +83,7 @@ nav::after{
 }
 
 .menu span {
-  background: red;
+  background:white;
     width: 100%;
   height: 0.1em;
   border-radius: 5px;
@@ -153,7 +144,7 @@ nav::after{
   width: 100%;
   z-index: -1;
   height: calc(100vh - 60px);
-  background:  #feca04;
+  background:  coral;
     
 }
 .linkContainer{
