--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,7 +148,7 @@ nav::after{
   width: 100%;
   z-index: -1;
   height: calc(100vh - 60px);
-  background:  coral;
+  background:  #1f285c;
     
 }
 .linkContainer{
