--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,7 +83,7 @@ nav::after{
   width: 40px;
   height: 60px;
   border-left: 1px solid white;
-  padding-left: 10x;
+  padding-left: 10px;
 }
 .menu div{
   width: 20px;
