--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,7 +101,7 @@ nav::after{
   display: block;
   position: absolute;
   top: 50%;
-  left: 65%;
+  left: 50%;
   transform: translate(-50%, -50%);
   transition: transform 0.5s, width 0.5s, background-color 0.5s;
 }
@@ -114,7 +114,7 @@ nav::after{
 .menu .line-3 {
   width: 50%;
   left: auto;
-  right: -6px;
+  right: -5;
   transform: translate(0, 8px);
 }
 
@@ -159,7 +159,7 @@ nav::after{
     
 }
 .linkContainer{
-  height: 100vh;
+  height: calc(100vh - 200px);
     width: 100vw;
     
     text-align: center;
