--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -143,7 +143,7 @@
 
 .popup {
     position: fixed;
-    top: 25px;
+    bottom: 50px;
     left: calc(50%);
     transform: translateX(-50%);
     border-radius: 6px;
