--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -261,7 +261,7 @@
 
     .title{
         display: inline-block;
-        width: 100vw;
+       max-width: 80vw;
     margin: 0px;
     font-size: 26px;
     
