--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -10,7 +10,7 @@
     flex-direction:column;
     align-items:center;
     text-align:center;
-    justify-content:center;
+    justify-content:space-evenly;
     padding: 20px;
     background-color:aliceblue;
     border-radius:10px;
