--- a/styles/Powered.module.css
+++ b/styles/Powered.module.css
@@ -10,4 +10,8 @@
     right: 20px;
     font-size: 12px;
     padding: 0 5px 0 10px;
+    padding: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
