--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -125,7 +125,7 @@
     border-radius:10px;
     border: 1px solid #d1411e;
 }
-
+.buttonTwo,
 .button{
     height: 30px;
     display:inline-block;
@@ -138,6 +138,11 @@
     border-radius: 6px;
     font-weight:500px;
     cursor:pointer;
+}
+.buttonTwo{
+    margin: 0;
+    margin-top: 10px;
+    width: 70px;
 }
 
 
